--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "symfony/http-foundation": "^7.0"
     }
 }
