--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "symfony/http-foundation": "^7.0"
+        "symfony/http-foundation": "^7.0",
+        "symfony/routing": "^7.0"
     }
 }
